--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev src/index.ts",
-    "start": "npm start"
+    "start": "npm start",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
